--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "helmet": "^7.1.0",
+    "mongoose": "^8.8.0",
+    "morgan": "^1.10.0",
     "winston": "^3.11.0"
   },
   "devDependencies": {
